--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credential@v1
       with:
-        aws-accees-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-acceㄴs-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
       
