--- a/.github/workflows/serverless.yml
+++ b/.github/workflows/serverless.yml
@@ -1,7 +1,7 @@
 name: NEXT deploy
 on:
   push:
-    barnches: master
+    branches: master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,9 +16,9 @@ jobs:
         npm install
     
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credential@v1
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-acceㄴs-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
       
