--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "deploy": "serverless"
   },
   "dependencies": {
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "serverless": "^2.68.0"
+    "@types/styled-components": "^5.1.25",
+    "next": "12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "serverless": "^2.68.0",
+    "styled-components": "^5",
+    "styled-reset": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
-    "@types/react": "17.0.37",
+    "@types/react": "^18.0.14",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
